--- a/AngularJsWithMvc/AngularJsWithMvc/Views/Grids/Index.cshtml
+++ b/AngularJsWithMvc/AngularJsWithMvc/Views/Grids/Index.cshtml
@@ -1,46 +1,53 @@
 ﻿@model IEnumerable<AngularJsWithMvc.Models.Grid>
 
 @{
-    ViewBag.Title = "Index";
+    Layout = null;
 }
 
-<h2>Index</h2>
+<!DOCTYPE html>
 
-<p>
-    @Html.ActionLink("Create New", "Create") 
-    <a href="/Grids/Grids"> Go to grid </a>
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.GroupBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SortBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Direction)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.GroupBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SortBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Direction)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
-
-</table>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+<body>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.GroupBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SortBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Direction)
+            </th>
+            <th></th>
+        </tr>
+    
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.GroupBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SortBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Direction)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            </td>
+        </tr>
+    }
+    
+    </table>
+</body>
+</html>
