Data displayed in column menu

--- a/AngularJsWithMvc/AngularJsWithMvc/Views/Grids/Grids.cshtml
+++ b/AngularJsWithMvc/AngularJsWithMvc/Views/Grids/Grids.cshtml
@@ -30,6 +30,7 @@
             &nbsp;&nbsp;
             <input type="submit" value="Save Column State" ng-click="saveColumnState()" />
             &nbsp;&nbsp;
+            <input type="submit" value="Test" ng-click="assignMenuItems()" />
             <a href="/Grids/Index"> Change Default Behaviour Of Grid </a>
         </div>
         <br />
